  - Fix permission for setting an issue's due date
  - Expose expires_at field when sharing project on API
  - Fix issue with page scrolling to top when closing or pinning sidebar (lukehowell)
  - Allow the Koding integration to be configured through the API
  - Added soft wrap button to repository file/blob editor
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Add configurable email subject suffix (Fu Xu)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Enable GitLab Import/Export for non-admin users.
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Use custom Ruby images to test builds (registry.dev.gitlab.org/gitlab/gitlab-build-images:*)
  - Revoke button in Applications Settings underlines on hover.
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Add broadcast messages and alerts below sub-nav
  - Better empty state for Groups view
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Fix broken repository 500 errors in project list
  - Close todos when accepting merge requests via the API !6486 (tonygambone)